@@ -76,7 +76,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.020000
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.020001
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
