@@ -1,6 +1,11 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.003002
+ [Changed / runtime recommends]
+ - Test::More 1.001003 → 1.001006
+
+ [Changed / test recommends]
+ - Test::More 1.001003 → 1.001006
 
 1.003001 2014-08-29T09:27:43Z
 
